--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Minhas Disciplinas</title>
 </head>
 <body>
+    <article>
     <title>
         Gerenciamento de Coniguração e Mudanças
     </title>
+</article>
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
     </p>
+    <article>
+        <title>Engenharia de Software</title>
+        <p>        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
+        </p>
+    </article>
 </body>
 </html>
