--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
     </p>
+    <title>
+       Desenvolvimento Web
+    </title>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
+    </p>
+    <title>
+        Banco de Dados
+     </title>
+     <p>
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
+     </p>
 </body>
 </html>
