--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
      <p>
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime deleniti necessitatibus qui tempora rem vitae architecto non enim eveniet! Amet corporis, necessitatibus fuga ullam nemo et tempore praesentium odit enim.
      </p>
+     </article>
 </body>
 </html>
